# kivy-widgets

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
docs/: buttons.md  index.md
kivy-widgets/: pyproject.toml
kivy_widgets/: __init__.py  behaviors.py  boxlayout.py  buttons.py  color_definitions.py  dropdown.py  floatlayout.py  icon_definitions.py  icons.py  textinput.py
tests/: test_demo.py  test_demo2.py  test_demo3.py  test_demo4.py
