[tool.poetry]
name = "kivy-widgets"
version = "0.1.0"
description = ""
authors = ["filipemarch <filipe.marchesini@gmail.com>"]
readme = "README.md"
packages = [{include = "kivy_widgets"}]

[tool.poetry.dependencies]
python = "^3.10"
kivy = {url = "https://github.com/kivy/Kivy/archive/master.zip"}


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
