[tool.poetry]
name = "kivy-widgets"
version = "0.1.32"
description = ""
authors = ["filipemarch <filipe.marchesini@gmail.com>", "ShootingStarDragon <rppapamaths@gmail.com>"]
readme = "README.md"
packages = [{include = "kivy_widgets"}]

[tool.poetry.dependencies]
python = "^3.8"
kivy = "^2.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
taskipy = "^1.10.3"
icecream = "^2.1.3"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."


[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "isort . && black ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=kivy_widgets -vv tests/"
testgl = "env KIVY_UNITTEST_SCREENSHOTS=1 pytest -s -x --cov=kivy_widgets -vv tests/"
post_test = "coverage html"